--- a/Desktop/Project/Pages/html/Add.html
+++ b/Desktop/Project/Pages/html/Add.html
@@ -18,7 +18,7 @@
             <div class="dropdown">
                 <button class="dropbtn"><img src="../../img/persona.png" alt="btnperfil" class="perfil"></button>
                 <div class="dropdown-content">
-                    <a href="perfil.html">Perfil</a>
+                    <a href="/Pages/html/Profile.html">Perfil</a>
                     <a href="#">Cerrar Sesión</a>
                 </div>
             </div>
@@ -58,6 +58,7 @@
     </div>
 
     <script src="/Pages/JS/ScriptAdd.js"></script>
+    <script src="/Pages/JS/ScriptBtn.js"></script>
     
 </body>
 
