--- a/Desktop/Project/Pages/html/Policy.html
+++ b/Desktop/Project/Pages/html/Policy.html
@@ -80,9 +80,11 @@
         <p>Esta política puede ser actualizada periódicamente. Le notificaremos sobre cambios importantes publicando la nueva política en nuestro sitio web.</p>
     </div>
 
+    <script src="/Pages/JS/ScriptBtn.js"></script>
+    
     <div class="footer">
         <div class="footer-links">
-            <a href="terminos.html">Política de Privacidad</a>
+            <a href="/Pages/html/Policy.html">Política de Privacidad</a>
         </div>
         <div class="copyright">
             Gestor de Censo Nacional - Perú © 2024
