--- a/Desktop/Project/Pages/html/Statistics.html
+++ b/Desktop/Project/Pages/html/Statistics.html
@@ -1,11 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GCN</title>
+    <link rel="stylesheet" href="/Pages/css/stylesStatistics.css">
 </head>
+
 <body>
-    
+    <!-- Barra de Navegación -->
+    <div class="navbar">
+        <div class="logo">GCN</div>
+        <div class="navbar-links">
+            <a href="/index.html">Inicio</a>
+            <a href="contacto.html">Contacto</a>
+            <div class="dropdown">
+                <button class="dropbtn"><img src="/Img/persona.png" alt="btnperfil" class="perfil"></button>
+                <div class="dropdown-content">
+                    <a href="/Pages/html/Profile.html">Perfil</a>
+                    <a href="#">Cerrar Sesión</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="contenido">
+        <!-- Imagen de fondo eliminada, será configurada en el CSS -->
+    </div>
+
+    <div class="titulo"><h1>Estadisticas del censo</h1></div>
+    <div class="contenedor_divs">
+        <div class="conten_grf">
+            <span>1.-Tipos de vivienda</span>
+            GRAFICO 1
+        </div>
+        <div class="conten_grf">
+            <span>2.-Condicion de ocupacion</span>
+            GRAFICO 2
+        </div>
+        <div class="conten_grf">
+            <span>3.-Material predominante en la construccion</span>
+            GRAFICO 3
+        </div>
+        <div class="conten_grf">
+            <span>4.-Procedencia del agua</span>
+            GRAFICO 4
+        </div>
+        <div class="conten_grf">
+            <span>5.-Conexion del servicio higienico</span>
+            GRAFICO 5
+        </div>
+        <div class="conten_grf">
+            <span>6.-Energia o combustible para cocinar</span>
+            GRAFICO 6
+        </div>
+        <div class="conten_grf">
+            <span>7.-Sexo</span>
+            GRAFICO 7
+        </div>
+        <div class="conten_grf">
+            <span>8.-Grado de estudio de las personas</span>
+            GRAFICO 8
+        </div>
+        <div class="conten_grf">
+            <span>9.-Estado civil de las personas</span>
+            GRAFICO 9
+        </div>
+        <div class="conten_grf">
+            <span>10.-Religion de las personas</span>
+            GRAFICO 10
+        </div>
+    </div>
+
+    <script src="/Pages/JS/ScriptBtn.js"></script>
+
+    <div class="footer">
+        <div class="footer-links">
+            <a href="/Pages/html/Policy.html">Política de Privacidad</a>
+        </div>
+        <div class="copyright">
+            Gestor de Censo Nacional - Perú © 2024
+        </div>
+    </div>
+
 </body>
+
 </html>
