--- a/Desktop/Project/index.html
+++ b/Desktop/Project/index.html
@@ -18,8 +18,8 @@
         <div class="dropdown">
             <button class="dropbtn"><img src="img/persona.png" alt="btnperfil" class="perfil"></button>
             <div class="dropdown-content">
-                <a href="perfil.html">Perfil</a>
-                <a href="#">Cerrar Sesión</a>
+                <a href="../Pages/html/Profile.html">Perfil</a>
+                <a href="../Pages/html/login.html" id="logoutBtn">Cerrar Sesión</a>
             </div>
         </div>
     </div>
@@ -40,25 +40,29 @@
             <div class="descripcion">Permite ingresar nuevos registros al sistema del censo nacional.</div>
         </div>
         <div class="boton-descripcion">
-            <a href="/Pages/mod.html" class="btn">Modificar</a>
+            <a href="/Pages/html/Modify.html" class="btn">Modificar</a>
             <div class="descripcion">Permite modificar los datos de un registro existente en la base de datos del censo nacional.</div>
         </div>
         <div class="boton-descripcion">
-            <a href="/Pages/delete.html" class="btn">Eliminar</a>
+            <a href="/Pages/html/Delete.html" class="btn">Eliminar</a>
             <div class="descripcion">Permite eliminar registros seleccionados de la base de datos del censo nacional.</div>
         </div>
     </div>
     <div class="grupo-botones2">
         <div class="boton-descripcion">
-            <a href="/Pages/Search.html" class="btn buscar">Buscar</a>
+            <a href="/Pages/html/Search.html" class="btn buscar">Buscar</a>
             <div class="descripcion">Permite activar la función de búsqueda que te permitirá encontrar rápidamente registros específicos en la base de datos del censo nacional.</div>
         </div>
         <div class="boton-descripcion">
-            <a href="/Pages/Statistics.html" class="btn">Estadísticas</a>
+            <a href="/Pages/html/Statistics.html" class="btn">Estadísticas</a>
             <div class="descripcion">Explora nuestras estadísticas para obtener información detallada sobre la población nacional.</div>
         </div>
     </div>
 </div>
+
+<script src="/Pages/JS/ScriptBtn.js"></script>
+
+
 
 <div class="footer">
     <div class="footer-links">
